--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://www.youtube.com/playlist?list=PL0jgN4oQcPT5Lv_iDhME5HjcGagKvNHxy" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>DIETAS</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>TREINOS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbri-opened-folder mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>CONSULTORIAS</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="https://lifestylemonster.midhaz.com/?ordenacao=nome-az" target="_blank"><span class="mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="https://lifestylemonster.github.io/loja/" target="_blank"><span class="mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
                     ACESSE A LOJA</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
 
     
 
@@ -105,7 +105,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4M3eV/oM8qzrT0g4qaLJk/ovmmHb2WvAh5YaEv9joFiJLkE3MsbJvEuF+vb08IsYczwUAuX/XFTt6rlSEh/WEm+vBHxhVwywu6hXpHchVUhU9+92m3mazFM1Du6aOvt3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L8X2hfP97VGxblgbd5PLrYurrtCzzpZ46kRj1GFKtxrDAtlhIIcKnpSTxasKBcPKL1HYlKceoIXOv4gw0HYvfSKISFJBtzt2F7Q8kzhOIdOmeUyVXViTRr8BGfhVmVSa">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Em breve a nossa Equipe entrará em contato, para você se consultar com um dos nossos Profissionais, OBRIGADO!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -213,7 +213,7 @@
                 </div>
             </div>
             <div class="col-md-9">
-                <p class="mbr-text align-right links mbr-fonts-style display-7"><a href="https://lifestylemonster.github.io/lifestylemonster/">INÍCIO&nbsp;</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://lifestylemonster.midhaz.com/?ordenacao=nome-az" target="_blank"> LOJA &nbsp; &nbsp;</a> &nbsp; &nbsp; &nbsp;<a href="mailto:lifestyyyle.monster@gmail.com">&nbsp; &nbsp;CONTATE-NOS</a></p>
+                <p class="mbr-text align-right links mbr-fonts-style display-7"><a href="https://lifestylemonster.github.io/lifestylemonster/">INÍCIO</a>&nbsp; &nbsp; &nbsp;<a href="https://lifestylemonster.github.io/loja/" target="_blank">LOJA</a>&nbsp; &nbsp; &nbsp;<a href="mailto:lifestyyyle.monster@gmail.com">CONTATE-NOS</a></p>
             </div>
         </div>
         <div class="footer-lower">
@@ -240,7 +240,7 @@
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://lifestylemonster.midhaz.com/?ordenacao=nome-az" target="_blank">
+                            <a href="https://lifestylemonster.github.io/loja/" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social mbri-cart-add" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                             </a>
                         </div>
