--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<script src="//code.jivosite.com/widget/AD8zN0WybD" async></script>
+<!-- /Analytics -->
+
+
   <section class="menu cid-s4UiN7qayC" once="menu" id="menu2-0">
 
     
@@ -59,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
 
     
 
@@ -105,7 +111,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EKcWOFEldxwPw4XIltlYWzlQybm3ISm8IeF9IU4WUcVECvuzIw4nEEGmpoZmJtKzlf5U4Ibt8AdYwcFzGy6wlySo48XjHTUQOU8BnZfPNh+UHIASPG5tT6UTj8t84saM">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PPOoOYLnMocnvJgrSbDPG1RRyAgDaELq0/ndLzknVD/YJTlaJOKXZ5WGGFXoU/nJ+PmMtIfKwgiiA8xgxqWZ1QvVyuuO/YHEmjScX2Usmb7GmyiibuOrKOl8SnFrl312">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Em breve a nossa Equipe entrará em contato, para você se consultar com um dos nossos Profissionais, OBRIGADO!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -213,7 +219,7 @@
                 </div>
             </div>
             <div class="col-md-9">
-                <p class="mbr-text align-right links mbr-fonts-style display-7"><a href="https://lifestylemonster.github.io/lifestylemonster/">INÍCIO</a>&nbsp; &nbsp; &nbsp;<a href="https://lifestylemonster.github.io/loja/" target="_blank">LOJA</a>&nbsp; &nbsp; &nbsp;<a href="mailto:lifestyyyle.monster@gmail.com">CONTATE-NOS</a></p>
+                <p class="mbr-text align-right links mbr-fonts-style display-7"><a href="https://lifestylemonster.github.io/lifestylemonster/meta%20name=google-site-verification%20content=d0phznLgkfTkWoTa-aUDgIRmU01JmvUS1_c40qnk8o0%20.html">INÍCIO</a>&nbsp; &nbsp; &nbsp;<a href="https://lifestylemonster.github.io/loja/" target="_blank">LOJA</a>&nbsp; &nbsp; &nbsp;<a href="mailto:lifestyyyle.monster@gmail.com">CONTATE-NOS</a></p>
             </div>
         </div>
         <div class="footer-lower">
